Fixed button jumping
Fixed button jumping

--- a/project2/assets/styles/affiliate2style.css
+++ b/project2/assets/styles/affiliate2style.css
@@ -185,9 +185,11 @@ position:relative;
 }
 
 
-.addToCart {
-	margin-right: 16px;
-margin-top: 20px;
+
+.container .product .addToCart {
+	margin-right: 35px;
+	margin-top: 20px;
+	
 	-moz-box-shadow:inset 0px 1px 0px 0px #9b81b3;
 	-webkit-box-shadow:inset 0px 1px 0px 0px #9b81b3;
 	box-shadow:inset 0px 1px 0px 0px #9b81b3;
@@ -195,18 +197,18 @@ margin-top: 20px;
 	background:-moz-linear-gradient( center top, #574369 5%, #7c5f96 100% );
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#574369', endColorstr='#7c5f96');
 	background-color:#574369;
-	-webkit-border-top-left-radius:20px;
-	-moz-border-radius-topleft:20px;
-	border-top-left-radius:20px;
-	-webkit-border-top-right-radius:20px;
-	-moz-border-radius-topright:20px;
-	border-top-right-radius:20px;
-	-webkit-border-bottom-right-radius:20px;
-	-moz-border-radius-bottomright:20px;
-	border-bottom-right-radius:20px;
-	-webkit-border-bottom-left-radius:20px;
-	-moz-border-radius-bottomleft:20px;
-	border-bottom-left-radius:20px;
+	-webkit-border-top-left-radius:10px;
+	-moz-border-radius-topleft:10px;
+	border-top-left-radius:10px;
+	-webkit-border-top-right-radius:10px;
+	-moz-border-radius-topright:10px;
+	border-top-right-radius:10px;
+	-webkit-border-bottom-right-radius:10px;
+	-moz-border-radius-bottomright:10px;
+	border-bottom-right-radius:10px;
+	-webkit-border-bottom-left-radius:10px;
+	-moz-border-radius-bottomleft:10px;
+	border-bottom-left-radius:10px;
 	text-indent:0;
 	border:1px solid #e8daeb;
 	display:inline-block;
@@ -227,9 +229,6 @@ margin-top: 20px;
 	background:-moz-linear-gradient( center top, #7c5f96 5%, #574369 100% );
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#7c5f96', endColorstr='#574369');
 	background-color:#7c5f96;
-}.addToCart:active {
-	position:relative;
-	top:1px;
 }
 
 .strikethrough {
@@ -267,7 +266,17 @@ width:200px;
 
 .product .right,ul#shoppingCart li .cartActions {
 position:absolute;
+
 right:0;
+}
+
+.product .right{
+	margin-right: 10px;
+}
+
+.itemname {
+	margin-top: 8px;
+	margin-left:5px;
 }
 
 .productImage,ul#shoppingCart {
